<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipe_detail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.recipedetails.RecipeDetailFragment">

    <TextView
        android:id="@+id/tv_recipe_name"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:text="Hello World!"
        android:textIsSelectable="true" />

    <Button
        android:id="@+id/view_steps"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Show Steps"
        android:visibility="visible" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_ingredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>